# scar-add-metadata-toolbox

./: .coveragerc  .env.example  .flaskenv  .flaskenv.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  add-metadata-toolbox.paw  candidate-record.json  docker-compose.yml  manage.py  pyproject.toml
docs/: command-reference.md  workflow-adding-collections.md  workflow-adding-records.md  workflow-permissions-users.md  workflow-updating-collections.md  workflow-updating-records.md
docs/api/: usage.md
provisioning/nomad/: scar-add-metadata-toolbox.hcl.tmpl  terraform.tf
provisioning/nomad-review-apps/: scar-add-metadata-toolbox.hcl.tmpl  terraform.tf
provisioning/podman/: docker-compose.yml  dot.env.tmpl  scar-add-metadata-toolbox.tmpl  terraform.tf
provisioning/terraform/: 00-terraform.tf  02-providers.tf  20-route53.tf  22-cloudfront.tf  40-s3.tf  50-iam.tf  54-azure_app_registrations.tf  58-acm_certificates.tf
provisioning/terraform/70-resources/iam/policies/inline/: integration-bucket.json  production-bucket.json
provisioning/terraform/70-resources/s3/bucket-policies/: integration-public-read.json  production-public-read.json
scar_add_metadata_toolbox/: __init__.py  __main__.py  classes.py  commands.py  config.py  csw.py  utils.py
scar_add_metadata_toolbox/hazmat/: metadata.py
scar_add_metadata_toolbox/static/css/: app.css
scar_add_metadata_toolbox/static/js/: feedback.js  item.js
scar_add_metadata_toolbox/templates/: feedback.j2  item-details.j2
scar_add_metadata_toolbox/templates/includes/collection/: item.j2  summary-information.j2
scar_add_metadata_toolbox/templates/includes/items/: additional-information.j2  authors.j2  citation.j2  contact.j2  descriptive-keywords.j2  extent.j2  licence.j2  lineage.j2
scar_add_metadata_toolbox/templates/legal/: cookies.j2  copyright.j2
support/docker-packaging/: Dockerfile  entrypoint.py
support/nginx/: default.conf  index.html
support/pycsw/patches/pycsw/plugins/profiles/apiso/: apiso.py
support/python-packages/: bas_metadata_library-0.0.0-py3-none-any.whl
support/python-packaging/: parse_version.py
support/xml-stylesheets/iso-rubric/: isoAltViews.xsl  isoRubricHTML.xsl
templates/: collection-details.j2
templates/includes/collection/: summary-information.j2
templates/includes/items/: additional-information.j2  authors.j2  citation.j2  contact.j2  data.j2  licence.j2  summary-information.j2
templates/legal/: privacy.j2
tests/: conftest.py
tests/scar_add_metadata_toolbox/: test_app.py  test_classes.py  test_commands.py  test_routes.py  test_utils.py
tests/scar_add_metadata_toolbox/classes/: __init__.py
tests/scar_add_metadata_toolbox/resources/csw/records/: __init__.py  get_record_39d47e50-f94f-43c5-9060-510d9374b81b_brief.xml  get_record_39d47e50-f94f-43c5-9060-510d9374b81b_full.xml  get_record_7e3719b4-60a4-4b4e-aa84-cee7a5e7218f_brief.xml  get_record_7e3719b4-60a4-4b4e-aa84-cee7a5e7218f_full.xml
