[tool.poetry]
name = "scar-add-metadata-toolbox"
version = "0.0.0"
license = "OGL-UK-3.0"
description = "Python library for generating SCAR Antarctic Digital Database metadata records"
authors = [
    "Felix Fennell <felnne@bas.ac.uk>"
]
readme = "README.md"
homepage = "https://github.com/antarctica/scar-add-metadata-toolbox"
repository = "https://github.com/antarctica/scar-add-metadata-toolbox"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

packages = [
    {include = "scar_add_metadata_toolbox"},
]

[tool.poetry.dependencies]
# bas-metadata-library = "0.0.0"
bas-style-kit-jinja-templates = "^0.4.0"
Flask = "^1.1.1"
inquirer = "^2.6.3"
msal = "^1.2"
OWSLib = "^0.19.2"
python = "^3.8"
python-dateutil = "^2.8.1"
python-dotenv = "^0.10.3"
requests = "^2.23.0"
sentry-sdk = {version = "^0.14.3", extras = ["flask"]}
str2bool = "^1.1"
# OWSlib dependencies - to pin version of indirect dependencies
pyproj = "2.6.0"
# PyCSW dependencies
pycsw = "^2.4.2"
psycopg2-binary = "^2.8.5"
simplejson = "^3.17.0"
SQLAlchemy = "^1.3.16"
flask-azure-oauth = "^0.4.0"
Frozen-Flask = "^0.15.0"
Markdown = "^3.2.1"
awscli = "^1.18.51"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
tomlkit = "^0.5.8"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-flask = "^0.15.0"
pytest-random-order = "^1.0.4"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = ''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
